--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "test": "jasmine"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jasmine-console-reporter": "^3.1.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.7",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "pug": "^3.0.2",
     "request": "^2.88.2"
