--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jasmine-console-reporter": "^3.0.0",
     "moment": "^2.29.1",
@@ -19,6 +20,8 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "nodemailer": "^6.6.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "request": "^2.88.2"
   },
