--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "jasmine-console-reporter": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.7",
     "mongoose-unique-validator": "^2.0.3",
