--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "jasmin": "0.0.2",
