--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jasmine"
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "bcrypt": "^5.0.1",
     "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "~1.4.5",
